# toulmin

./: .ffignore  .gitignore  LICENSE  MANUAL.md  NOTICE  README.ko.md  README.md  codebook.yaml  go.mod  go.sum  manual-for-ai.md  paper-toulmin-applying.ko.md  paper-toulmin-applying.md
files/: request001.md  toulmin-applying.ko.md  toulmin-engine-design.md
pkg/: README.md
plans/: Phase001-toulmin.md  Phase002-toulmin.md  Phase003-toulmin.md  Phase004-toulmin.md  Phase005-toulmin.md  Phase006-toulmin.md  Phase007-toulmin.md  Phase008-toulmin.md  Phase009-toulmin.md  Phase010-backing.md  Phase011-route.md  Phase011-rule-ref.md  Phase012-policy.md  Phase012-rule-ref.md  Phase013-policy.md  Phase013-state.md  Phase014-approve.md  Phase014-state.md  Phase015-approve.md  Phase015-price.md  Phase016-feature.md  Phase016-price.md  Phase017-feature.md  Phase017-moderate.md  Phase018-decouple-gin.md  Phase019-backing.md  Phase019-generics.md
py/: pyproject.toml
py/src/rulecat/: __init__.py  context.py  defeat_edge.py  detect_cycle.py  detect_run_cycle.py  expectations.py  func_id.py  graph.py  rule.py  rule_id.py  rule_meta.py  run_view.py  short_name.py  test_detect_run_cycle.py  test_graph.py  test_rule.py  test_run_view.py  trace.py  types.py
py/tests/: test_evaluate.py  test_expectations.py  test_find_spec.py  test_graph.py  test_run.py  test_run_compose.py  test_trace.py
test/: README.md  bad-run-cycle.md  bad-section-order.md  bad-undo-without-do.md  factory-line-cascade.md  library-renewal.md  newsletter-tick-fixed.md  newsletter-tick-warn.md  order-saga.md
(+1356 files in other folders)
