[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rulecat"
version = "0.1.0"
description = "Toulmin argumentation-based rule engine for Python"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/rulecat"]
